# simple-crud

./: .env  Readme.md  docker-compose.yml  env.py  local.env  pyproject.toml  pytest.ini
django_app/: settings.py  urls.py
products/: forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py
products/templates/products/: home.html  list.html  register.html
templates/: base.html
templates/parciais/: _messages.html  _nav.html
tests/products/: test_views.py
