[tool.poetry]
name = "Oak Application"
version = "0.1.0"
description = "Project made for Oak application"
authors = ["Gustavo Felipe <gustavofeliperepositorio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
django = "^5.0.6"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
django-widget-tweaks = "^1.5.0"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnigs"

[tool.taskipy.tasks]
run = "python manage.py runserver"
makemigrations = "python manage.py makemigrations"
migrate = "python manage.py migrate"
test = "pytest --cov=products -vv"
post_test = "coverage html"
test-matching = "pytest ./tests -vv -k"
packages = "poetry install --no-root"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
